--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.github.ceryle:RadioRealButton:v2.1.1'
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
     implementation 'com.vivian.widgets:TimeLineItemDecoration:1.5'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
