--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.bignerdranch.a277test">
+    package="android.cmpe277.pokeaccount">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -31,19 +31,19 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name="android.cmpe277.pokeaccount.MainActivity">
 
         </activity>
-        <activity android:name=".AccountListActivity" />
-        <activity android:name=".AccountActivity" />
-        <activity android:name=".Login.LoginActivity">
+        <activity android:name="android.cmpe277.pokeaccount.AccountListActivity" />
+        <activity android:name="android.cmpe277.pokeaccount.AccountActivity" />
+        <activity android:name="android.cmpe277.pokeaccount.Login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Expense_Income_Activity"></activity>
+        <activity android:name="android.cmpe277.pokeaccount.Expense_Income_Activity"></activity>
     </application>
 
 </manifest>
